dataset1235/2025-2/2868285114/users/214715729/executions/3792430146_1492666623.log
== SUBMISSION (2025-09-03 16:03:41)
-- CODE: 
int main() {
  int qtd_sucos, qtd_salgados;
double dinheiro;
double preco_suco = 3.00, prco_salgado = 3.50;
double total;
scanf("%d", &qtd_sucos);
scanf("%d", &qtd_saldados);
scanf("%lf", &dinheeiro);
total = qtd_sucos * preco_suco + qtd_saldados * preco_salgado;
print("%.21f\n", total);
if (dinheiro >= total){
  print("sim\n");
} else{
  printf("nao\n");
}
rturn 0;
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0
5
12.60
---- correct output:
17.5
Nao
-- ERROR:
File "XXXX", line 1
    int main() {
               ^
SyntaxError: '{' was never closed
-- TEST CASE 2:
---- input:
2
2
15.0
---- correct output:
13.0
Sim
-- ERROR:
File "XXXX", line 1
    int main() {
               ^
SyntaxError: '{' was never closed
-- TEST CASE 3:
---- input:
3
3
20.0
---- correct output:
19.5
Sim
-- ERROR:
File "XXXX", line 1
    int main() {
               ^
SyntaxError: '{' was never closed
-- TEST CASE 4:
---- input:
10
2
15.00
---- correct output:
37.0
Nao
-- ERROR:
File "XXXX", line 1
    int main() {
               ^
SyntaxError: '{' was never closed
-- TEST CASE 5:
---- input:
3
5
25.50
---- correct output:
26.5
Nao
-- ERROR:
File "XXXX", line 1
    int main() {
               ^
SyntaxError: '{' was never closed
-- TEST CASE 6:
---- input:
1
2
8.0
---- correct output:
10.0
Nao
-- ERROR:
File "XXXX", line 1
    int main() {
               ^
SyntaxError: '{' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-03 15:47:19)
-- CODE: 
qtd_sucos = int(input())
qtd _salgados = int(input())
dinheiro = float(input())

preco_suco = 3.00
preco_salgado = 3.50

total = qtd_sucos * preco_suco + qtd_salgados * preco_salgado

total_arredondado = round(total, 2)

print(total_arredondado)

if dinheiro >= total_arredondado:
  print("sim")
else:
  print("nao")

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0
5
12.60
---- correct output:
17.5
Nao
-- ERROR:
File "XXXX", line 2
    qtd _salgados = int(input())
        ^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
2
2
15.0
---- correct output:
13.0
Sim
-- ERROR:
File "XXXX", line 2
    qtd _salgados = int(input())
        ^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
3
3
20.0
---- correct output:
19.5
Sim
-- ERROR:
File "XXXX", line 2
    qtd _salgados = int(input())
        ^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
10
2
15.00
---- correct output:
37.0
Nao
-- ERROR:
File "XXXX", line 2
    qtd _salgados = int(input())
        ^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
3
5
25.50
---- correct output:
26.5
Nao
-- ERROR:
File "XXXX", line 2
    qtd _salgados = int(input())
        ^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
1
2
8.0
---- correct output:
10.0
Nao
-- ERROR:
File "XXXX", line 2
    qtd _salgados = int(input())
        ^^^^^^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-03 15:47:17)
-- CODE: 
qtd_sucos = int(input())
qtd _salgados = int(input())
dinheiro = float(input())

preco_suco = 3.00
preco_salgado = 3.50

total = qtd_sucos * preco_suco + qtd_salgados * preco_salgado

total_arredondado = round(total, 2)

print(total_arredondado)

if dinheiro >= total_arredondado:
  print("sim")
else:
  print("nao")

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0
5
12.60
---- correct output:
17.5
Nao
-- ERROR:
File "XXXX", line 2
    qtd _salgados = int(input())
        ^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
2
2
15.0
---- correct output:
13.0
Sim
-- ERROR:
File "XXXX", line 2
    qtd _salgados = int(input())
        ^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
3
3
20.0
---- correct output:
19.5
Sim
-- ERROR:
File "XXXX", line 2
    qtd _salgados = int(input())
        ^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
10
2
15.00
---- correct output:
37.0
Nao
-- ERROR:
File "XXXX", line 2
    qtd _salgados = int(input())
        ^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
3
5
25.50
---- correct output:
26.5
Nao
-- ERROR:
File "XXXX", line 2
    qtd _salgados = int(input())
        ^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
1
2
8.0
---- correct output:
10.0
Nao
-- ERROR:
File "XXXX", line 2
    qtd _salgados = int(input())
        ^^^^^^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-03 15:46:05)
-- CODE: 
qtd_sucos = int(input())
qtd _salgados = int(input())
dinheiro = float(input())

preco_suco = 3.00
preco_salgado = 3.50

total = qtd_sucos * preco_suco + qtd_salgados * preco_salgado

total_arredondado = round(total, 2)
print(total_arredondado)
if dinheiro >= total_arredondado:
  print("sim")
else:
  print("nao")

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0
5
12.60
---- correct output:
17.5
Nao
-- ERROR:
File "XXXX", line 2
    qtd _salgados = int(input())
        ^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
2
2
15.0
---- correct output:
13.0
Sim
-- ERROR:
File "XXXX", line 2
    qtd _salgados = int(input())
        ^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
3
3
20.0
---- correct output:
19.5
Sim
-- ERROR:
File "XXXX", line 2
    qtd _salgados = int(input())
        ^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
10
2
15.00
---- correct output:
37.0
Nao
-- ERROR:
File "XXXX", line 2
    qtd _salgados = int(input())
        ^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
3
5
25.50
---- correct output:
26.5
Nao
-- ERROR:
File "XXXX", line 2
    qtd _salgados = int(input())
        ^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
1
2
8.0
---- correct output:
10.0
Nao
-- ERROR:
File "XXXX", line 2
    qtd _salgados = int(input())
        ^^^^^^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-03 15:46:04)
-- CODE: 
qtd_sucos = int(input())
qtd _salgados = int(input())
dinheiro = float(input())

preco_suco = 3.00
preco_salgado = 3.50

total = qtd_sucos * preco_suco + qtd_salgados * preco_salgado

total_arredondado = round(total, 2)
print(total_arredondado)
if dinheiro >= total_arredondado:
  print("sim")
else:
  print("nao")

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0
5
12.60
---- correct output:
17.5
Nao
-- ERROR:
File "XXXX", line 2
    qtd _salgados = int(input())
        ^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
2
2
15.0
---- correct output:
13.0
Sim
-- ERROR:
File "XXXX", line 2
    qtd _salgados = int(input())
        ^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
3
3
20.0
---- correct output:
19.5
Sim
-- ERROR:
File "XXXX", line 2
    qtd _salgados = int(input())
        ^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
10
2
15.00
---- correct output:
37.0
Nao
-- ERROR:
File "XXXX", line 2
    qtd _salgados = int(input())
        ^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
3
5
25.50
---- correct output:
26.5
Nao
-- ERROR:
File "XXXX", line 2
    qtd _salgados = int(input())
        ^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
1
2
8.0
---- correct output:
10.0
Nao
-- ERROR:
File "XXXX", line 2
    qtd _salgados = int(input())
        ^^^^^^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-03 15:45:42)
-- CODE: 
qtd_sucos = int(input())
qtd _salgados = int(input())
dinheiro = float(input())

preco_suco = 3.00
preco_salgado = 3.50

total = qtd_sucos * preco_suco +
qtd_salgados * preco_salgado

total_arredondado = round(total, 2)
print(total_arredondado)
if dinheiro >= total_arredondado:
  print("sim")
else:
  print("nao")

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0
5
12.60
---- correct output:
17.5
Nao
-- ERROR:
File "XXXX", line 2
    qtd _salgados = int(input())
        ^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
2
2
15.0
---- correct output:
13.0
Sim
-- ERROR:
File "XXXX", line 2
    qtd _salgados = int(input())
        ^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
3
3
20.0
---- correct output:
19.5
Sim
-- ERROR:
File "XXXX", line 2
    qtd _salgados = int(input())
        ^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
10
2
15.00
---- correct output:
37.0
Nao
-- ERROR:
File "XXXX", line 2
    qtd _salgados = int(input())
        ^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
3
5
25.50
---- correct output:
26.5
Nao
-- ERROR:
File "XXXX", line 2
    qtd _salgados = int(input())
        ^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
1
2
8.0
---- correct output:
10.0
Nao
-- ERROR:
File "XXXX", line 2
    qtd _salgados = int(input())
        ^^^^^^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-03 04:19:06)
-- CODE: 
qtd_sucos = int(input())
qtd _salgados = int(input())
valor_disponivel = float(input())

preco_suco = 3.00
preco_salgado = 3.50

total = qtd_sucos * preco_suco
qtd_salgados * preco_salgado

print(f"{total:.2f}")
if valor_disponivel >= total:
  print("sim")
else:
  print("nao")

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0
5
12.60
---- correct output:
17.5
Nao
-- ERROR:
File "XXXX", line 2
    qtd _salgados = int(input())
        ^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
2
2
15.0
---- correct output:
13.0
Sim
-- ERROR:
File "XXXX", line 2
    qtd _salgados = int(input())
        ^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
3
3
20.0
---- correct output:
19.5
Sim
-- ERROR:
File "XXXX", line 2
    qtd _salgados = int(input())
        ^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
10
2
15.00
---- correct output:
37.0
Nao
-- ERROR:
File "XXXX", line 2
    qtd _salgados = int(input())
        ^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
3
5
25.50
---- correct output:
26.5
Nao
-- ERROR:
File "XXXX", line 2
    qtd _salgados = int(input())
        ^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
1
2
8.0
---- correct output:
10.0
Nao
-- ERROR:
File "XXXX", line 2
    qtd _salgados = int(input())
        ^^^^^^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-03 16:03:44)
-- CODE: 
int main() {
  int qtd_sucos, qtd_salgados;
double dinheiro;
double preco_suco = 3.00, prco_salgado = 3.50;
double total;
scanf("%d", &qtd_sucos);
scanf("%d", &qtd_saldados);
scanf("%lf", &dinheeiro);
total = qtd_sucos * preco_suco + qtd_saldados * preco_salgado;
print("%.21f\n", total);
if (dinheiro >= total){
  print("sim\n");
} else{
  printf("nao\n");
}
rturn 0;
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0
5
12.60
---- correct output:
17.5
Nao
-- ERROR:
File "XXXX", line 1
    int main() {
               ^
SyntaxError: '{' was never closed
-- TEST CASE 2:
---- input:
2
2
15.0
---- correct output:
13.0
Sim
-- ERROR:
File "XXXX", line 1
    int main() {
               ^
SyntaxError: '{' was never closed
-- TEST CASE 3:
---- input:
3
3
20.0
---- correct output:
19.5
Sim
-- ERROR:
File "XXXX", line 1
    int main() {
               ^
SyntaxError: '{' was never closed
-- TEST CASE 4:
---- input:
10
2
15.00
---- correct output:
37.0
Nao
-- ERROR:
File "XXXX", line 1
    int main() {
               ^
SyntaxError: '{' was never closed
-- TEST CASE 5:
---- input:
3
5
25.50
---- correct output:
26.5
Nao
-- ERROR:
File "XXXX", line 1
    int main() {
               ^
SyntaxError: '{' was never closed
-- TEST CASE 6:
---- input:
1
2
8.0
---- correct output:
10.0
Nao
-- ERROR:
File "XXXX", line 1
    int main() {
               ^
SyntaxError: '{' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-03 15:45:43)
-- CODE: 
qtd_sucos = int(input())
qtd _salgados = int(input())
dinheiro = float(input())

preco_suco = 3.00
preco_salgado = 3.50

total = qtd_sucos * preco_suco +
qtd_salgados * preco_salgado

total_arredondado = round(total, 2)
print(total_arredondado)
if dinheiro >= total_arredondado:
  print("sim")
else:
  print("nao")

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0
5
12.60
---- correct output:
17.5
Nao
-- ERROR:
File "XXXX", line 2
    qtd _salgados = int(input())
        ^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
2
2
15.0
---- correct output:
13.0
Sim
-- ERROR:
File "XXXX", line 2
    qtd _salgados = int(input())
        ^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
3
3
20.0
---- correct output:
19.5
Sim
-- ERROR:
File "XXXX", line 2
    qtd _salgados = int(input())
        ^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
10
2
15.00
---- correct output:
37.0
Nao
-- ERROR:
File "XXXX", line 2
    qtd _salgados = int(input())
        ^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
3
5
25.50
---- correct output:
26.5
Nao
-- ERROR:
File "XXXX", line 2
    qtd _salgados = int(input())
        ^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
1
2
8.0
---- correct output:
10.0
Nao
-- ERROR:
File "XXXX", line 2
    qtd _salgados = int(input())
        ^^^^^^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-03 15:52:07)
-- CODE: 
qtd_sucos = int(input().strip())
qtd _salgados = int(input().strip())
dinheiro = float(input().strip().replace(',','.'))

preco_suco = 3.00
preco_salgado = 3.50

total = qtd_sucos * preco_suco + qtd_salgados * preco_salgado

print(f"{total:.2f}")

if dinheiro >= total - 1e-9:
  print("sim")
else:
  print("nao")

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0
5
12.60
---- correct output:
17.5
Nao
-- ERROR:
File "XXXX", line 2
    qtd _salgados = int(input().strip())
        ^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
2
2
15.0
---- correct output:
13.0
Sim
-- ERROR:
File "XXXX", line 2
    qtd _salgados = int(input().strip())
        ^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
3
3
20.0
---- correct output:
19.5
Sim
-- ERROR:
File "XXXX", line 2
    qtd _salgados = int(input().strip())
        ^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
10
2
15.00
---- correct output:
37.0
Nao
-- ERROR:
File "XXXX", line 2
    qtd _salgados = int(input().strip())
        ^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
3
5
25.50
---- correct output:
26.5
Nao
-- ERROR:
File "XXXX", line 2
    qtd _salgados = int(input().strip())
        ^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
1
2
8.0
---- correct output:
10.0
Nao
-- ERROR:
File "XXXX", line 2
    qtd _salgados = int(input().strip())
        ^^^^^^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-03 15:52:05)
-- CODE: 
qtd_sucos = int(input().strip())
qtd _salgados = int(input().strip())
dinheiro = float(input().strip().replace(',','.'))

preco_suco = 3.00
preco_salgado = 3.50

total = qtd_sucos * preco_suco + qtd_salgados * preco_salgado

print(f"{total:.2f}")

if dinheiro >= total - 1e-9:
  print("sim")
else:
  print("nao")

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0
5
12.60
---- correct output:
17.5
Nao
-- ERROR:
File "XXXX", line 2
    qtd _salgados = int(input().strip())
        ^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
2
2
15.0
---- correct output:
13.0
Sim
-- ERROR:
File "XXXX", line 2
    qtd _salgados = int(input().strip())
        ^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
3
3
20.0
---- correct output:
19.5
Sim
-- ERROR:
File "XXXX", line 2
    qtd _salgados = int(input().strip())
        ^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
10
2
15.00
---- correct output:
37.0
Nao
-- ERROR:
File "XXXX", line 2
    qtd _salgados = int(input().strip())
        ^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
3
5
25.50
---- correct output:
26.5
Nao
-- ERROR:
File "XXXX", line 2
    qtd _salgados = int(input().strip())
        ^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
1
2
8.0
---- correct output:
10.0
Nao
-- ERROR:
File "XXXX", line 2
    qtd _salgados = int(input().strip())
        ^^^^^^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-03 16:03:43)
-- CODE: 
int main() {
  int qtd_sucos, qtd_salgados;
double dinheiro;
double preco_suco = 3.00, prco_salgado = 3.50;
double total;
scanf("%d", &qtd_sucos);
scanf("%d", &qtd_saldados);
scanf("%lf", &dinheeiro);
total = qtd_sucos * preco_suco + qtd_saldados * preco_salgado;
print("%.21f\n", total);
if (dinheiro >= total){
  print("sim\n");
} else{
  printf("nao\n");
}
rturn 0;
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0
5
12.60
---- correct output:
17.5
Nao
-- ERROR:
File "XXXX", line 1
    int main() {
               ^
SyntaxError: '{' was never closed
-- TEST CASE 2:
---- input:
2
2
15.0
---- correct output:
13.0
Sim
-- ERROR:
File "XXXX", line 1
    int main() {
               ^
SyntaxError: '{' was never closed
-- TEST CASE 3:
---- input:
3
3
20.0
---- correct output:
19.5
Sim
-- ERROR:
File "XXXX", line 1
    int main() {
               ^
SyntaxError: '{' was never closed
-- TEST CASE 4:
---- input:
10
2
15.00
---- correct output:
37.0
Nao
-- ERROR:
File "XXXX", line 1
    int main() {
               ^
SyntaxError: '{' was never closed
-- TEST CASE 5:
---- input:
3
5
25.50
---- correct output:
26.5
Nao
-- ERROR:
File "XXXX", line 1
    int main() {
               ^
SyntaxError: '{' was never closed
-- TEST CASE 6:
---- input:
1
2
8.0
---- correct output:
10.0
Nao
-- ERROR:
File "XXXX", line 1
    int main() {
               ^
SyntaxError: '{' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-03 16:03:44)
-- CODE: 
int main() {
  int qtd_sucos, qtd_salgados;
double dinheiro;
double preco_suco = 3.00, prco_salgado = 3.50;
double total;
scanf("%d", &qtd_sucos);
scanf("%d", &qtd_saldados);
scanf("%lf", &dinheeiro);
total = qtd_sucos * preco_suco + qtd_saldados * preco_salgado;
print("%.21f\n", total);
if (dinheiro >= total){
  print("sim\n");
} else{
  printf("nao\n");
}
rturn 0;
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0
5
12.60
---- correct output:
17.5
Nao
-- ERROR:
File "XXXX", line 1
    int main() {
               ^
SyntaxError: '{' was never closed
-- TEST CASE 2:
---- input:
2
2
15.0
---- correct output:
13.0
Sim
-- ERROR:
File "XXXX", line 1
    int main() {
               ^
SyntaxError: '{' was never closed
-- TEST CASE 3:
---- input:
3
3
20.0
---- correct output:
19.5
Sim
-- ERROR:
File "XXXX", line 1
    int main() {
               ^
SyntaxError: '{' was never closed
-- TEST CASE 4:
---- input:
10
2
15.00
---- correct output:
37.0
Nao
-- ERROR:
File "XXXX", line 1
    int main() {
               ^
SyntaxError: '{' was never closed
-- TEST CASE 5:
---- input:
3
5
25.50
---- correct output:
26.5
Nao
-- ERROR:
File "XXXX", line 1
    int main() {
               ^
SyntaxError: '{' was never closed
-- TEST CASE 6:
---- input:
1
2
8.0
---- correct output:
10.0
Nao
-- ERROR:
File "XXXX", line 1
    int main() {
               ^
SyntaxError: '{' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-03 15:46:03)
-- CODE: 
qtd_sucos = int(input())
qtd _salgados = int(input())
dinheiro = float(input())

preco_suco = 3.00
preco_salgado = 3.50

total = qtd_sucos * preco_suco + qtd_salgados * preco_salgado

total_arredondado = round(total, 2)
print(total_arredondado)
if dinheiro >= total_arredondado:
  print("sim")
else:
  print("nao")

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0
5
12.60
---- correct output:
17.5
Nao
-- ERROR:
File "XXXX", line 2
    qtd _salgados = int(input())
        ^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
2
2
15.0
---- correct output:
13.0
Sim
-- ERROR:
File "XXXX", line 2
    qtd _salgados = int(input())
        ^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
3
3
20.0
---- correct output:
19.5
Sim
-- ERROR:
File "XXXX", line 2
    qtd _salgados = int(input())
        ^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
10
2
15.00
---- correct output:
37.0
Nao
-- ERROR:
File "XXXX", line 2
    qtd _salgados = int(input())
        ^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
3
5
25.50
---- correct output:
26.5
Nao
-- ERROR:
File "XXXX", line 2
    qtd _salgados = int(input())
        ^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
1
2
8.0
---- correct output:
10.0
Nao
-- ERROR:
File "XXXX", line 2
    qtd _salgados = int(input())
        ^^^^^^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-03 15:46:04)
-- CODE: 
qtd_sucos = int(input())
qtd _salgados = int(input())
dinheiro = float(input())

preco_suco = 3.00
preco_salgado = 3.50

total = qtd_sucos * preco_suco + qtd_salgados * preco_salgado

total_arredondado = round(total, 2)
print(total_arredondado)
if dinheiro >= total_arredondado:
  print("sim")
else:
  print("nao")

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0
5
12.60
---- correct output:
17.5
Nao
-- ERROR:
File "XXXX", line 2
    qtd _salgados = int(input())
        ^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
2
2
15.0
---- correct output:
13.0
Sim
-- ERROR:
File "XXXX", line 2
    qtd _salgados = int(input())
        ^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
3
3
20.0
---- correct output:
19.5
Sim
-- ERROR:
File "XXXX", line 2
    qtd _salgados = int(input())
        ^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
10
2
15.00
---- correct output:
37.0
Nao
-- ERROR:
File "XXXX", line 2
    qtd _salgados = int(input())
        ^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
3
5
25.50
---- correct output:
26.5
Nao
-- ERROR:
File "XXXX", line 2
    qtd _salgados = int(input())
        ^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
1
2
8.0
---- correct output:
10.0
Nao
-- ERROR:
File "XXXX", line 2
    qtd _salgados = int(input())
        ^^^^^^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-03 15:45:41)
-- CODE: 
qtd_sucos = int(input())
qtd _salgados = int(input())
dinheiro = float(input())

preco_suco = 3.00
preco_salgado = 3.50

total = qtd_sucos * preco_suco +
qtd_salgados * preco_salgado

total_arredondado = round(total, 2)
print(total_arredondado)
if dinheiro >= total_arredondado:
  print("sim")
else:
  print("nao")

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0
5
12.60
---- correct output:
17.5
Nao
-- ERROR:
File "XXXX", line 2
    qtd _salgados = int(input())
        ^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
2
2
15.0
---- correct output:
13.0
Sim
-- ERROR:
File "XXXX", line 2
    qtd _salgados = int(input())
        ^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
3
3
20.0
---- correct output:
19.5
Sim
-- ERROR:
File "XXXX", line 2
    qtd _salgados = int(input())
        ^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
10
2
15.00
---- correct output:
37.0
Nao
-- ERROR:
File "XXXX", line 2
    qtd _salgados = int(input())
        ^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
3
5
25.50
---- correct output:
26.5
Nao
-- ERROR:
File "XXXX", line 2
    qtd _salgados = int(input())
        ^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
1
2
8.0
---- correct output:
10.0
Nao
-- ERROR:
File "XXXX", line 2
    qtd _salgados = int(input())
        ^^^^^^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-03 15:52:07)
-- CODE: 
qtd_sucos = int(input().strip())
qtd _salgados = int(input().strip())
dinheiro = float(input().strip().replace(',','.'))

preco_suco = 3.00
preco_salgado = 3.50

total = qtd_sucos * preco_suco + qtd_salgados * preco_salgado

print(f"{total:.2f}")

if dinheiro >= total - 1e-9:
  print("sim")
else:
  print("nao")

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0
5
12.60
---- correct output:
17.5
Nao
-- ERROR:
File "XXXX", line 2
    qtd _salgados = int(input().strip())
        ^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
2
2
15.0
---- correct output:
13.0
Sim
-- ERROR:
File "XXXX", line 2
    qtd _salgados = int(input().strip())
        ^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
3
3
20.0
---- correct output:
19.5
Sim
-- ERROR:
File "XXXX", line 2
    qtd _salgados = int(input().strip())
        ^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
10
2
15.00
---- correct output:
37.0
Nao
-- ERROR:
File "XXXX", line 2
    qtd _salgados = int(input().strip())
        ^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
3
5
25.50
---- correct output:
26.5
Nao
-- ERROR:
File "XXXX", line 2
    qtd _salgados = int(input().strip())
        ^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
1
2
8.0
---- correct output:
10.0
Nao
-- ERROR:
File "XXXX", line 2
    qtd _salgados = int(input().strip())
        ^^^^^^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-03 04:19:07)
-- CODE: 
qtd_sucos = int(input())
qtd _salgados = int(input())
valor_disponivel = float(input())

preco_suco = 3.00
preco_salgado = 3.50

total = qtd_sucos * preco_suco
qtd_salgados * preco_salgado

print(f"{total:.2f}")
if valor_disponivel >= total:
  print("sim")
else:
  print("nao")

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0
5
12.60
---- correct output:
17.5
Nao
-- ERROR:
File "XXXX", line 2
    qtd _salgados = int(input())
        ^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
2
2
15.0
---- correct output:
13.0
Sim
-- ERROR:
File "XXXX", line 2
    qtd _salgados = int(input())
        ^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
3
3
20.0
---- correct output:
19.5
Sim
-- ERROR:
File "XXXX", line 2
    qtd _salgados = int(input())
        ^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
10
2
15.00
---- correct output:
37.0
Nao
-- ERROR:
File "XXXX", line 2
    qtd _salgados = int(input())
        ^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
3
5
25.50
---- correct output:
26.5
Nao
-- ERROR:
File "XXXX", line 2
    qtd _salgados = int(input())
        ^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
1
2
8.0
---- correct output:
10.0
Nao
-- ERROR:
File "XXXX", line 2
    qtd _salgados = int(input())
        ^^^^^^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-03 15:47:18)
-- CODE: 
qtd_sucos = int(input())
qtd _salgados = int(input())
dinheiro = float(input())

preco_suco = 3.00
preco_salgado = 3.50

total = qtd_sucos * preco_suco + qtd_salgados * preco_salgado

total_arredondado = round(total, 2)

print(total_arredondado)

if dinheiro >= total_arredondado:
  print("sim")
else:
  print("nao")

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0
5
12.60
---- correct output:
17.5
Nao
-- ERROR:
File "XXXX", line 2
    qtd _salgados = int(input())
        ^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
2
2
15.0
---- correct output:
13.0
Sim
-- ERROR:
File "XXXX", line 2
    qtd _salgados = int(input())
        ^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
3
3
20.0
---- correct output:
19.5
Sim
-- ERROR:
File "XXXX", line 2
    qtd _salgados = int(input())
        ^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
10
2
15.00
---- correct output:
37.0
Nao
-- ERROR:
File "XXXX", line 2
    qtd _salgados = int(input())
        ^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
3
5
25.50
---- correct output:
26.5
Nao
-- ERROR:
File "XXXX", line 2
    qtd _salgados = int(input())
        ^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
1
2
8.0
---- correct output:
10.0
Nao
-- ERROR:
File "XXXX", line 2
    qtd _salgados = int(input())
        ^^^^^^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-03 04:19:04)
-- CODE: 
qtd_sucos = int(input())
qtd _salgados = int(input())
valor_disponivel = float(input())

preco_suco = 3.00
preco_salgado = 3.50

total = qtd_sucos * preco_suco
qtd_salgados * preco_salgado

print(f"{total:.2f}")
if valor_disponivel >= total:
  print("sim")
else:
  print("nao")

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0
5
12.60
---- correct output:
17.5
Nao
-- ERROR:
File "XXXX", line 2
    qtd _salgados = int(input())
        ^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
2
2
15.0
---- correct output:
13.0
Sim
-- ERROR:
File "XXXX", line 2
    qtd _salgados = int(input())
        ^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
3
3
20.0
---- correct output:
19.5
Sim
-- ERROR:
File "XXXX", line 2
    qtd _salgados = int(input())
        ^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
10
2
15.00
---- correct output:
37.0
Nao
-- ERROR:
File "XXXX", line 2
    qtd _salgados = int(input())
        ^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
3
5
25.50
---- correct output:
26.5
Nao
-- ERROR:
File "XXXX", line 2
    qtd _salgados = int(input())
        ^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
1
2
8.0
---- correct output:
10.0
Nao
-- ERROR:
File "XXXX", line 2
    qtd _salgados = int(input())
        ^^^^^^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-03 04:19:07)
-- CODE: 
qtd_sucos = int(input())
qtd _salgados = int(input())
valor_disponivel = float(input())

preco_suco = 3.00
preco_salgado = 3.50

total = qtd_sucos * preco_suco
qtd_salgados * preco_salgado

print(f"{total:.2f}")
if valor_disponivel >= total:
  print("sim")
else:
  print("nao")

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0
5
12.60
---- correct output:
17.5
Nao
-- ERROR:
File "XXXX", line 2
    qtd _salgados = int(input())
        ^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
2
2
15.0
---- correct output:
13.0
Sim
-- ERROR:
File "XXXX", line 2
    qtd _salgados = int(input())
        ^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
3
3
20.0
---- correct output:
19.5
Sim
-- ERROR:
File "XXXX", line 2
    qtd _salgados = int(input())
        ^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
10
2
15.00
---- correct output:
37.0
Nao
-- ERROR:
File "XXXX", line 2
    qtd _salgados = int(input())
        ^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
3
5
25.50
---- correct output:
26.5
Nao
-- ERROR:
File "XXXX", line 2
    qtd _salgados = int(input())
        ^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
1
2
8.0
---- correct output:
10.0
Nao
-- ERROR:
File "XXXX", line 2
    qtd _salgados = int(input())
        ^^^^^^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-03 15:52:06)
-- CODE: 
qtd_sucos = int(input().strip())
qtd _salgados = int(input().strip())
dinheiro = float(input().strip().replace(',','.'))

preco_suco = 3.00
preco_salgado = 3.50

total = qtd_sucos * preco_suco + qtd_salgados * preco_salgado

print(f"{total:.2f}")

if dinheiro >= total - 1e-9:
  print("sim")
else:
  print("nao")

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0
5
12.60
---- correct output:
17.5
Nao
-- ERROR:
File "XXXX", line 2
    qtd _salgados = int(input().strip())
        ^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
2
2
15.0
---- correct output:
13.0
Sim
-- ERROR:
File "XXXX", line 2
    qtd _salgados = int(input().strip())
        ^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
3
3
20.0
---- correct output:
19.5
Sim
-- ERROR:
File "XXXX", line 2
    qtd _salgados = int(input().strip())
        ^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
10
2
15.00
---- correct output:
37.0
Nao
-- ERROR:
File "XXXX", line 2
    qtd _salgados = int(input().strip())
        ^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
3
5
25.50
---- correct output:
26.5
Nao
-- ERROR:
File "XXXX", line 2
    qtd _salgados = int(input().strip())
        ^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
1
2
8.0
---- correct output:
10.0
Nao
-- ERROR:
File "XXXX", line 2
    qtd _salgados = int(input().strip())
        ^^^^^^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-03 15:52:08)
-- CODE: 
qtd_sucos = int(input().strip())
qtd _salgados = int(input().strip())
dinheiro = float(input().strip().replace(',','.'))

preco_suco = 3.00
preco_salgado = 3.50

total = qtd_sucos * preco_suco + qtd_salgados * preco_salgado

print(f"{total:.2f}")

if dinheiro >= total - 1e-9:
  print("sim")
else:
  print("nao")

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0
5
12.60
---- correct output:
17.5
Nao
-- ERROR:
File "XXXX", line 2
    qtd _salgados = int(input().strip())
        ^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
2
2
15.0
---- correct output:
13.0
Sim
-- ERROR:
File "XXXX", line 2
    qtd _salgados = int(input().strip())
        ^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
3
3
20.0
---- correct output:
19.5
Sim
-- ERROR:
File "XXXX", line 2
    qtd _salgados = int(input().strip())
        ^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
10
2
15.00
---- correct output:
37.0
Nao
-- ERROR:
File "XXXX", line 2
    qtd _salgados = int(input().strip())
        ^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
3
5
25.50
---- correct output:
26.5
Nao
-- ERROR:
File "XXXX", line 2
    qtd _salgados = int(input().strip())
        ^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
1
2
8.0
---- correct output:
10.0
Nao
-- ERROR:
File "XXXX", line 2
    qtd _salgados = int(input().strip())
        ^^^^^^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-03 16:03:42)
-- CODE: 
int main() {
  int qtd_sucos, qtd_salgados;
double dinheiro;
double preco_suco = 3.00, prco_salgado = 3.50;
double total;
scanf("%d", &qtd_sucos);
scanf("%d", &qtd_saldados);
scanf("%lf", &dinheeiro);
total = qtd_sucos * preco_suco + qtd_saldados * preco_salgado;
print("%.21f\n", total);
if (dinheiro >= total){
  print("sim\n");
} else{
  printf("nao\n");
}
rturn 0;
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0
5
12.60
---- correct output:
17.5
Nao
-- ERROR:
File "XXXX", line 1
    int main() {
               ^
SyntaxError: '{' was never closed
-- TEST CASE 2:
---- input:
2
2
15.0
---- correct output:
13.0
Sim
-- ERROR:
File "XXXX", line 1
    int main() {
               ^
SyntaxError: '{' was never closed
-- TEST CASE 3:
---- input:
3
3
20.0
---- correct output:
19.5
Sim
-- ERROR:
File "XXXX", line 1
    int main() {
               ^
SyntaxError: '{' was never closed
-- TEST CASE 4:
---- input:
10
2
15.00
---- correct output:
37.0
Nao
-- ERROR:
File "XXXX", line 1
    int main() {
               ^
SyntaxError: '{' was never closed
-- TEST CASE 5:
---- input:
3
5
25.50
---- correct output:
26.5
Nao
-- ERROR:
File "XXXX", line 1
    int main() {
               ^
SyntaxError: '{' was never closed
-- TEST CASE 6:
---- input:
1
2
8.0
---- correct output:
10.0
Nao
-- ERROR:
File "XXXX", line 1
    int main() {
               ^
SyntaxError: '{' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-03 04:19:05)
-- CODE: 
qtd_sucos = int(input())
qtd _salgados = int(input())
valor_disponivel = float(input())

preco_suco = 3.00
preco_salgado = 3.50

total = qtd_sucos * preco_suco
qtd_salgados * preco_salgado

print(f"{total:.2f}")
if valor_disponivel >= total:
  print("sim")
else:
  print("nao")

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0
5
12.60
---- correct output:
17.5
Nao
-- ERROR:
File "XXXX", line 2
    qtd _salgados = int(input())
        ^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
2
2
15.0
---- correct output:
13.0
Sim
-- ERROR:
File "XXXX", line 2
    qtd _salgados = int(input())
        ^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
3
3
20.0
---- correct output:
19.5
Sim
-- ERROR:
File "XXXX", line 2
    qtd _salgados = int(input())
        ^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
10
2
15.00
---- correct output:
37.0
Nao
-- ERROR:
File "XXXX", line 2
    qtd _salgados = int(input())
        ^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
3
5
25.50
---- correct output:
26.5
Nao
-- ERROR:
File "XXXX", line 2
    qtd _salgados = int(input())
        ^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
1
2
8.0
---- correct output:
10.0
Nao
-- ERROR:
File "XXXX", line 2
    qtd _salgados = int(input())
        ^^^^^^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-03 16:03:40)
-- CODE: 
int main() {
  int qtd_sucos, qtd_salgados;
double dinheiro;
double preco_suco = 3.00, prco_salgado = 3.50;
double total;
scanf("%d", &qtd_sucos);
scanf("%d", &qtd_saldados);
scanf("%lf", &dinheeiro);
total = qtd_sucos * preco_suco + qtd_saldados * preco_salgado;
print("%.21f\n", total);
if (dinheiro >= total){
  print("sim\n");
} else{
  printf("nao\n");
}
rturn 0;
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0
5
12.60
---- correct output:
17.5
Nao
-- ERROR:
File "XXXX", line 1
    int main() {
               ^
SyntaxError: '{' was never closed
-- TEST CASE 2:
---- input:
2
2
15.0
---- correct output:
13.0
Sim
-- ERROR:
File "XXXX", line 1
    int main() {
               ^
SyntaxError: '{' was never closed
-- TEST CASE 3:
---- input:
3
3
20.0
---- correct output:
19.5
Sim
-- ERROR:
File "XXXX", line 1
    int main() {
               ^
SyntaxError: '{' was never closed
-- TEST CASE 4:
---- input:
10
2
15.00
---- correct output:
37.0
Nao
-- ERROR:
File "XXXX", line 1
    int main() {
               ^
SyntaxError: '{' was never closed
-- TEST CASE 5:
---- input:
3
5
25.50
---- correct output:
26.5
Nao
-- ERROR:
File "XXXX", line 1
    int main() {
               ^
SyntaxError: '{' was never closed
-- TEST CASE 6:
---- input:
1
2
8.0
---- correct output:
10.0
Nao
-- ERROR:
File "XXXX", line 1
    int main() {
               ^
SyntaxError: '{' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-03 15:47:18)
-- CODE: 
qtd_sucos = int(input())
qtd _salgados = int(input())
dinheiro = float(input())

preco_suco = 3.00
preco_salgado = 3.50

total = qtd_sucos * preco_suco + qtd_salgados * preco_salgado

total_arredondado = round(total, 2)

print(total_arredondado)

if dinheiro >= total_arredondado:
  print("sim")
else:
  print("nao")

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0
5
12.60
---- correct output:
17.5
Nao
-- ERROR:
File "XXXX", line 2
    qtd _salgados = int(input())
        ^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
2
2
15.0
---- correct output:
13.0
Sim
-- ERROR:
File "XXXX", line 2
    qtd _salgados = int(input())
        ^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
3
3
20.0
---- correct output:
19.5
Sim
-- ERROR:
File "XXXX", line 2
    qtd _salgados = int(input())
        ^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
10
2
15.00
---- correct output:
37.0
Nao
-- ERROR:
File "XXXX", line 2
    qtd _salgados = int(input())
        ^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
3
5
25.50
---- correct output:
26.5
Nao
-- ERROR:
File "XXXX", line 2
    qtd _salgados = int(input())
        ^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
1
2
8.0
---- correct output:
10.0
Nao
-- ERROR:
File "XXXX", line 2
    qtd _salgados = int(input())
        ^^^^^^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
